--- a/alpha/advertising/templates/advertising/campaign/edit.html
+++ b/alpha/advertising/templates/advertising/campaign/edit.html
@@ -18,6 +18,7 @@
     <script src="{{STATIC_URL}}js/jquery.balloon.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js" type="text/javascript"></script>    
     <script src="{{STATIC_URL}}js/create_event/venue_account_owner.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/date-range.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/advertising/setup-page.js" type="text/javascript"></script>
 {% endblock %}
 
@@ -82,8 +83,9 @@
                     </div>
 
                     <div class="campaign-active-to">
-                        Will be active until
-                        {{ form.active_to }}
+                        Will be active
+                        {{ campaign.active_from }}
+                        {{ form.active_from }} - {{ form.active_to }}
                     </div>
                     
                     Pick the type of ad(s) they want to put on City Fusion: Box, Skyscraper, Banner, etc.
