--- a/alpha/advertising/templates/advertising/setup.html
+++ b/alpha/advertising/templates/advertising/setup.html
@@ -14,6 +14,7 @@
     <script src="{{STATIC_URL}}js/create_event/venue_account_owner.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/tabs.js"></script>
     <script src="{{STATIC_URL}}js/advertising/total-price-calculation.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/date-range.js" type="text/javascript"></script>    
     <script src="{{STATIC_URL}}js/advertising/setup-page.js" type="text/javascript"></script>
 {% endblock %}
 
@@ -80,8 +81,8 @@
                     </div>
 
                     <div class="campaign-active-to">
-                        Will be active until
-                        {{ form.active_to }}
+                        Will be active
+                        {{ form.active_from }} - {{ form.active_to }}
                     </div>
                     
                     {% setup_advertising_types %}
