Modify FAQ Information

--- a/alpha/home/templates/pages/faq.html
+++ b/alpha/home/templates/pages/faq.html
@@ -13,30 +13,33 @@
                     <div class="inner-content">
                         <ul class="entries-list">
                             <li>
-                                <div class="list-entry-title" data-type="entry_title">How do I promote my event?</div>
+                                <div class="list-entry-title" data-type="entry_title">What is a featured ad?</div>
                                 <div class="list-entry-text first" data-type="entry_text">
-                                    Aenean sed fermentum metus. Integer imperdiet nisi vel lectus fermentum malesuada.
-                                    Aliquam tincidunt tempus tempus. Aliquam euismod mauris non eros facilisis.
-                                    Aenean sed fermentum metus. Integer imperdiet nisi vel lectus fermentum malesuada.
-                                    Aliquam tincidunt tempus tempus. Aliquam euismod mauris non eros facilisis.
+                                    A Featured Ad is a way to have your events seen.  First create the event, and then on your accounts page, click “Make Featured Event.”  This will take you to a page where you can pay to have your event featured.  It costs $2.00 per day and runs until the end of the last day you chose.  Your event will be featured on the home page and will also be sent via peoples emails.
                                 </div>
                             </li>
                             <li>
                                 <div class="list-entry-title" data-type="entry_title">How do I ensure my event gets seen?</div>
                                 <div class="list-entry-text" data-type="entry_text">
-                                    Aenean sed fermentum metus. Integer imperdiet nisi vel lectus fermentum malesuada.
-                                    Aliquam tincidunt tempus tempus. Aliquam euismod mauris non eros facilisis.
-                                    Aenean sed fermentum metus. Integer imperdiet nisi vel lectus fermentum malesuada.
-                                    Aliquam tincidunt tempus tempus. Aliquam euismod mauris non eros facilisis.
+                                    To ensure the event gets seen one can do the following: make featured event, purchase an ad and have the ad point to the event, drive people to the event by using the social buttons on the event page, and utilize the Facebook on the bottom to create conversation about the event.
                                 </div>
                             </li>
                             <li>
-                                <div class="list-entry-title" data-type="entry_title">What tags do i use?</div>
+                                <div class="list-entry-title" data-type="entry_title">What tags do I use when creating an event?</div>
                                 <div class="list-entry-text" data-type="entry_text">
-                                    Aenean sed fermentum metus. Integer imperdiet nisi vel lectus fermentum malesuada.
-                                    Aliquam tincidunt tempus tempus. Aliquam euismod mauris non eros facilisis.
-                                    Aenean sed fermentum metus. Integer imperdiet nisi vel lectus fermentum malesuada.
-                                    Aliquam tincidunt tempus tempus. Aliquam euismod mauris non eros facilisis.
+                                    The best tags to use are ones that are relevant and speak about the event or even the venue.  For example, a night club may want to use tags such as: Night Life, 19+, DJ, Dance, Live Music, (Name of Band Playing), (Name of Venue), (Location such as Downtown or Broadway), Free (if no cost), and Date Night (if a good place to take a date).  A limit of 10 tags is allowed.
+                                </div>
+                            </li>
+                            <li>
+                                <div class="list-entry-title" data-type="entry_title">How does “Remind Me” work?</div>
+                                <div class="list-entry-text" data-type="entry_text">
+                                    When logged in, a person can click “Remind Me” if they see an event they want to be reminded about, we send an email or text, and they can see the events on the website.  Cityfusion will send a reminder based on account settings.  A person can insert their email or phone number in settings to send the reminder hours or days in advance.  This feature will ensure no one misses another event again.
+                                </div>
+                            </li>
+                            <li>
+                                <div class="list-entry-title" data-type="entry_title">How does “In the Loop” work?</div>
+                                <div class="list-entry-text" data-type="entry_text">
+                                    When logged in, a person can click “In the Loop” if they see an event that interests them.  There will be a list of tags that are associated with that event.  Pick the tags that are of interest to you and be notified when those tags are used in a future event.  A notification will be sent in the form of an email or text, or can be seen on the website when the tag is used in an event.  This is a great feature if one wants to be in the loop of specific events in the community.
                                 </div>
                             </li>
                         </ul>
