--- a/alpha/home/templates/base-new.html
+++ b/alpha/home/templates/base-new.html
@@ -17,7 +17,12 @@
     <link type="text/css" href="{{STATIC_URL}}date/css/redmond/jquery-ui-1.8.23.custom.css" rel="stylesheet" />
 
     <link href="{{ STATIC_URL }}css/facebook.css" type="text/css" rel="stylesheet" media="all" />
-    <link href="{{ STATIC_URL }}styles/accounts/signin_signup.css" type="text/css" rel="stylesheet" media="all" />    
+    <link href="{{ STATIC_URL }}styles/accounts/signin_signup.css" type="text/css" rel="stylesheet" media="all" />
+
+    <link rel="stylesheet" href="{{ STATIC_URL }}font-awesome/css/font-awesome.min.css">
+    <!--[if IE 7]>
+      <link rel="stylesheet" href="{{ STATIC_URL }}font-awesome/css/font-awesome-ie7.min.css">
+    <![endif]-->
 
     <script type="text/javascript" src="{{STATIC_URL}}js/libs/js_api.js"></script>
     <!--[if (gte IE 6)&(lte IE 8)]>
