--- a/alpha/event/templates/events/create/_form.html
+++ b/alpha/event/templates/events/create/_form.html
@@ -407,6 +407,12 @@
                     {% for error in form.images.errors %}
                         <div class="error">{{ error }}</div>
                     {% endfor %}
+
+                    <div class="full-screen-popup" data-thumb-width="180" data-thumb-height="180">
+                        <img class="cropping-image" src="/static/images/default-event.jpg">
+                        <div class="save-button">Save image</div>
+                        <div class="cancel-button">Cancel</div>
+                    </div>
                 </td>
             </tr>
             <tr></tr>
