--- a/alpha/event/templates/events/list/event_block.html
+++ b/alpha/event/templates/events/list/event_block.html
@@ -4,7 +4,7 @@
 <div class="entry-info home-page">
     <div class="entry-img-prev">
         {% if event.picture %}
-            <img src="{% cropped_thumbnail event.base "cropping" width=60 %}" height="60px" weight="60px">
+            <img src="{% cropped_thumbnail event.image "cropping" width=60 %}" height="60px" weight="60px">
         {% else %}
             <img src="{{STATIC_URL}}images/default-event.jpg" height="60px" weight="60px">
         {% endif %}
